# python-rofi-menu

./: .editorconfig  .gitignore  CHANGELOG.md  Dockerfile  README.md  example.py  pyproject.toml
.github/workflows/: lint.yml
rofi_menu/: __init__.py  constants.py  main.py  menu.py  rofi_mode.py  session.py
rofi_menu/contrib/: __init__.py  desktop.py  desktopentry.py  monitor.py  shell.py  touchpad.py
rofi_menu/contrib/web_search/: __init__.py  ecosia.py  google.py  search_menu.py  startpage.py  wikipedia.py  wolfram.py  youtube.py
rofi_menu/rofi_mode/: __init__.py  rofi_mode.py  rofi_mode_15.py  rofi_mode_16.py
tests/integration/: test_e2e.py
