[tool.poetry]
name = "rofi-menu"
version = "0.1.0"
description = "Create rofi menus via python"
authors = ["miphreal <miphreal@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
