[tool.poetry]
name = "rofi-menu"
version = "0.6"
description = "Create rofi menus via python"
authors = ["miphreal <miphreal@gmail.com>"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/miphreal/python-rofi-menu"
repository = "https://github.com/miphreal/python-rofi-menu"
documentation = "https://github.com/miphreal/python-rofi-menu"

keywords = ["menu", "rofi", "rofi-mode"]


[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
pytest = "^6.2.3"
mypy = "^0.812"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
